<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/status_background"
    tools:context=".statusFragment">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/soubi_imagebutton"
        android:src="@android:drawable/divider_horizontal_dim_dark"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/soubi_imagebutton"
        android:src="@android:drawable/divider_horizontal_dim_dark"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/Weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        tools:text="剣" />

    <TextView
        android:id="@+id/Shield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Weapon"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:text="たて" />

    <TextView
        android:id="@+id/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Head"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        tools:text="よろい" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buki"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/NextLevel" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/karada"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/atama"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/MagicPowerPoint"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/DefensePoint"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:text="0" />

    <TextView
        android:id="@+id/DefensePoint"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/AttackPoint"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="0" />

    <ProgressBar
        android:id="@+id/HPBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/custom_progress"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ProgressBar
        android:id="@+id/MPBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/custom_progress"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/MagicPower"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/defense"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/attack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/MPBar"
        app:layout_constraintTop_toBottomOf="@+id/MPBar" />

    <TextView
        android:id="@+id/AttackPoint"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/MPBar"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:text="0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/MagicPoint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/HPBar"
        app:layout_constraintTop_toBottomOf="@+id/HPBar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/HitPoint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Level"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/Level"
        android:layout_width="33dp"
        android:layout_height="24dp"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:text="0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level99"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/Level"
        app:layout_constraintTop_toTopOf="@+id/Level" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Shield"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        tools:text="かぶと" />

    <TextView
        android:id="@+id/MaxHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/HPBar"
        app:layout_constraintEnd_toEndOf="@+id/HPBar"
        tools:text="0" />

    <TextView
        android:id="@+id/MaxMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/MPBar"
        app:layout_constraintEnd_toEndOf="@+id/MPBar"
        tools:text="0" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        app:layout_constraintBottom_toTopOf="@+id/MPBar"
        app:layout_constraintEnd_toStartOf="@+id/MaxMP" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        app:layout_constraintBottom_toTopOf="@+id/HPBar"
        app:layout_constraintEnd_toStartOf="@+id/MaxHP" />

    <TextView
        android:id="@+id/HP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/HPBar"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        tools:text="0" />

    <TextView
        android:id="@+id/MP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/MPBar"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        tools:text="0" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/tugi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Exp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/NextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29"
        tools:text="0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="184dp"
        android:layout_height="172dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/maou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/waza"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:background="@drawable/soubi_imagebutton"
        android:src="@android:drawable/divider_horizontal_dim_dark"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>